# crypto-exchange-client-poloniex

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
include/crypto-exchange-client-poloniex/: apiMessage.hpp  client.hpp  wsMessage.hpp
src/crypto-exchange-client-poloniex/: CMakeLists.txt
src/crypto-exchange-client-poloniex-demo/: CMakeLists.txt  _poloniex-demo.cpp  api-secret.hpp
src/crypto-exchange-client-poloniex/src/: client.cpp  wsMessage.cpp
